Restored text above chests